@@ -1,4 +1,4 @@
-pysitepkg_LTLIBRARIES = igraph.la
+pyexec_LTLIBRARIES = igraph.la
 
 igraph_la_SOURCES       = igraphmodule.c error.c error.h convert.c convert.h \
                           vertexobject.c vertexobject.h \
@@ -16,8 +16,8 @@ EXTRA_DIST = test.py test.sh
 ## We don't need libtool's versioning information in the Python
 ## library, so remove them
 install-data-hook:
-	rm -f $(pysitepkgdir)/igraph.so $(pysitepkgdir)/igraph.so.0 $(pysitepkgdir)/igraph.so.0.0
-	rm -f $(pysitepkgdir)/igraph.a $(pysitepkgdir)/igraph.la
-	mv $(pysitepkgdir)/igraph.so.0.0.0 $(pysitepkgdir)/igraph.so
+	rm -f $(pyexecdir)/igraph.so $(pyexecdir)/igraph.so.0 $(pyexecdir)/igraph.so.0.0
+	rm -f $(pyexecdir)/igraph.a $(pyexecdir)/igraph.la
+	mv $(pyexecdir)/igraph.so.0.0.0 $(pyexecdir)/igraph.so
 
 MAINTAINERCLEANFILES = Makefile.in
